# Clustered-Deferred-shading-in-Vulkan

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Vulkan Thesis.sln  imgui.ini
Vulkan Thesis/: Vulkan Thesis.vcxproj  Vulkan Thesis.vcxproj.filters  imgui.ini
Vulkan Thesis/data/: bvh.comp  bvh_leaves.comp  composite.frag  composite.vert  debug.frag  gbuffers.frag  gbuffers.vert  lightculling.comp  pagealloc.comp  pagecompact.comp  pageflag.comp  pagestore.comp  shader.frag  shader.vert  sort_bitonic.comp  sort_findSublistsBounds.comp  sort_merge256.comp  sort_mergeBitonic.comp  sort_mergeSeq.comp  sort_mergeSublists.comp  sort_splitterSort2_8.comp  sort_splitters.comp  sort_sublistAlloc.comp  sort_util.comp  structs.inl  ui.frag  ui.vert
Vulkan Thesis/doc/: projekt-01-kapitoly-chapters.tex  projekt-01-uvod.tex  projekt-02-API.tex  projekt-03-metody.tex  projekt-04-navrh.tex  projekt-05-implementacia.tex  projekt-20-literatura-bibliography.bib  projekt-30-prilohy-appendices.tex  (+2 more)
data/: bvh.comp  composite.frag  composite_deferred.frag  composite_tiled.frag  gbuffers.frag  lightculling.comp  lightculling_tiled.comp  pagecompact.comp  pageflag.comp  pagestore.comp  pt_alloc.comp  pt_compact.comp  pt_flag.comp  pt_store.comp  pt_utils.comp  sort_mergeBitonic.comp
src/: BaseApp.cpp  BaseApp.h  Camera.cpp  Camera.h  Context.cpp  Context.h  Model.cpp  Model.h  Renderer.cpp  Renderer.cpp~RF62ed1b8.TMP  Renderer.h  Resource.cpp  Resource.h  Scene.cpp  Scene.h  ShaderResourceConfig.inl  ThreadPool.cpp  ThreadPool.h  UI.cpp  UI.h  Util.cpp  Util.h  lodepng.cpp  main.cpp
(+23 files in other folders)
